@@ -2,6 +2,7 @@ package com.revature.service;
 
 import java.sql.Timestamp;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.revature.dao.ReimbursementImpl;
 import com.revature.dao.UserImpl;
@@ -23,40 +24,45 @@ public class FinanceManagerService extends UserService{
 		return rdao.findAllReimbersements();
 	}
 	
+	// tested and works
 	public List<Reimbursement> allPendingReinbursements(){
-		return allReimbursements().stream()
-				.filter(r-> r.getStatus().equals(EReimbursementStatus.PENDING)).toList();
+		return allReimbursements().stream()				// 1 is hardcoded as pending in db
+				.filter(r-> r.getStatus().getId() == 1).collect(Collectors.toList());
 	}
 	
+	// tested and works
 	public List<Reimbursement> allResolvedReinbursements(){
 		return allReimbursements().stream()
-				.filter(r-> (r.getStatus().equals(EReimbursementStatus.PENDING) == false)).toList();
+				.filter(r-> (r.getStatus().getId() != 1)).collect(Collectors.toList());
 	}
 	
+	// tested and works
 	public List<Reimbursement> allReimbursementsByEmployee(String employeeUsername){
 		return allReimbursements().stream()
-				.filter(r -> (r.getEmployee().getUsername().equals(employeeUsername))).toList();
+				.filter(r -> (r.getEmployee().getUsername().equals(employeeUsername))).collect(Collectors.toList());
 	}
 	
+	// tested and works
 	public List<User> allEmployees(){
 		return udao.findAllUsers().stream()
-				.filter(u -> (u.getRole().equals(EUserRole.EMPLOYEE))).toList();
+				.filter(u -> (u.getRole().getId() == 1)).collect(Collectors.toList());
 	}
 	
-	
-	public void denyReimbursement(Reimbursement r, User manager) {
-		r.setStatus(EReimbursementStatus.REJECTED);
+	// tested and works
+	public boolean denyReimbursement(Reimbursement r, User manager) {
+		r.setStatus(new EReimbursementStatus(3, "rejected"));
 		Timestamp ts = new Timestamp(System.currentTimeMillis());
 		r.setTimeResolved(ts);
 		r.setManagerId(manager);
-		rdao.update(r);
+		return rdao.update(r);
 	}
 	
-	public void approveReimbursement(Reimbursement r, User manager) {
-		r.setStatus(EReimbursementStatus.APPROVED);
+	// tested and works
+	public boolean approveReimbursement(Reimbursement r, User manager) {
+		r.setStatus(new EReimbursementStatus(2, "approved"));
 		Timestamp ts = new Timestamp(System.currentTimeMillis());
 		r.setTimeResolved(ts);
 		r.setManagerId(manager);
-		rdao.update(r);
+		return rdao.update(r);
 	}
 }
